step 5 mysite project, create error-request-count.html, added view func 'error_req_count', changed ThrottlingMiddleware

--- a/mysite/requestdataapp/templates/requestdataapp/error-request-count.html
+++ b/mysite/requestdataapp/templates/requestdataapp/error-request-count.html
@@ -1,10 +1,9 @@
 {% extends 'requestdataapp/base.html' %}
 
 {% block title %}
-  Error
+  Error request
 {% endblock %}
 
 {% block body %}
-  <h1>Error. file > 1 mb</h1>
-
+  <h1>To many request! Try again after 3 minutes.</h1>
 {% endblock %}
