--- a/mysite/shopapp/templates/shopapp/orders-list.html
+++ b/mysite/shopapp/templates/shopapp/orders-list.html
@@ -27,5 +27,9 @@
     {% else %}
         <h3>Нет заказов</h3>
     {% endif %}
-
+<div>
+    <a href="{% url 'shopapp:order_create' %}">
+        Create a new order
+    </a>
+</div>
 {% endblock %}
