step 7 mysite project, созданы представления для продуктов и заказов при помощи generic views

--- a/mysite/shopapp/templates/shopapp/base.html
+++ b/mysite/shopapp/templates/shopapp/base.html
@@ -12,14 +12,14 @@
   {% block body %}
     Base body
   {% endblock %}
-<div>
-    {% now 'H:i' as time %}
-    Time {{ time }}
-</div>
+<!--<div>-->
+<!--    {% now 'H:i' as time %}-->
+<!--    Time {{ time }}-->
+<!--</div>-->
 
-<div>
-    {% now 'l' as current_weekday %}
-    Today is {{ current_weekday }}
-</div>
+<!--<div>-->
+<!--    {% now 'l' as current_weekday %}-->
+<!--    Today is {{ current_weekday }}-->
+<!--</div>-->
 </body>
 </html>
