--- a/mysite/shopapp/templates/shopapp/groups-list.html
+++ b/mysite/shopapp/templates/shopapp/groups-list.html
@@ -6,7 +6,16 @@
 
 {% block body %}
     <h1>Groups:</h1>
-    <ul>
+    <div>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">
+                Create
+            </button>
+        </form>
+    </div>
+    <div>
         {% if not groups %}
         <h3>Not groups yet</h3>
         {% else %}
