--- a/mysite/myauth/templates/myauth/profile_update_form.html
+++ b/mysite/myauth/templates/myauth/profile_update_form.html
@@ -1,11 +1,11 @@
-{% extends 'shopapp/base.html' %}
+{% extends 'myauth/base.html' %}
 
 {% block title %}
-  Update product
+  Update profile
 {% endblock %}
 
 {% block body %}
-  <h1>Update product</h1>
+  <h1>Update profile</h1>
   <div>
     <form method="post" enctype="multipart/form-data">
       {% csrf_token %}
@@ -14,7 +14,7 @@
     </form>
   </div>
 <div>
-  <a href="{% url 'shopapp:product_details' pk=object.pk %}"
-  >Back to product #{{ object.pk }}</a>
+  <a href="{% url 'myauth:about-me' pk=user.pk %}"
+  >Back to about me #{{ object.pk }}</a>
 </div>
 {% endblock %}
