--- a/mysite/shopapp/templates/shopapp/products-list.html
+++ b/mysite/shopapp/templates/shopapp/products-list.html
@@ -15,6 +15,10 @@
             <p>Price: {{ product.price }}</p>
             <p>Discount: {% firstof product.discount 'No discount' %}</p>
             <p>Created by: {{ product.created_by.username }}</p>
+
+            {% if product.preview %}
+                <img src="{{ product.preview.url }}" alt="{{ product.preview.name }}">
+            {% endif %}
         </div>
         {% endfor %}
     </div>
