step 12 mysite project, добавлены переводы согласно заданию

--- a/mysite/shopapp/templates/shopapp/shop-index.html
+++ b/mysite/shopapp/templates/shopapp/shop-index.html
@@ -18,6 +18,11 @@
             {% endfor %}
         </ul>
     </div>
+    <div>
+        <strong>
+            You have {{ items }} item{{ items|pluralize:"es" }}
+        </strong>
+    </div>
 
     <div>
         time running: {{ time_running }}
