--- a/mysite/shopapp/templates/shopapp/products-details.html
+++ b/mysite/shopapp/templates/shopapp/products-details.html
@@ -1,22 +1,31 @@
 {% extends 'shopapp/base.html' %}
 
+{% load i18n %}
+
 {% block title %}
-    Product #{{ product.pk }}
+    {% translate 'Product' %} #{{ product.pk }}
 {% endblock %}
 
 {% block body %}
-    <h1>Product <strong>{{ product.name }}</strong></h1>
+    <h1>{% translate 'Product' %} <strong>{{ product.name }}</strong></h1>
     <div>
-        <div>Description: <em>{{ product.description }}</em></div>
-        <div>Price: {{ product.price }}</div>
-        <div>Discount: {{ product.discount }}</div>
-        <div>Archived: {{ product.archived }}</div>
+        <div>{% translate 'Description' %}: <em>{{ product.description }}</em></div>
+        <div>{% translate 'Price' %}: {{ product.price }}</div>
+        <div>{% translate 'Discount' %}: {{ product.discount }}</div>
+        <div>{% translate 'Archived' %}: {{ product.archived }}</div>
 
         {% if product.preview %}
                 <img src="{{ product.preview.url }}" alt="{{ product.preview.name }}">
         {% endif %}
 
-        <h3>Images</h3>
+        <h3>{% translate 'Images' %}</h3>
+        <div>
+            {% blocktranslate count image_count=product.images.all|length %}
+            There is only one image.
+            {% plural %}
+            There are {{ image_count }} images.
+            {% endblocktranslate %}
+        </div>
         <div>
             {% for img in product.images.all %}
                 <div>
@@ -24,17 +33,17 @@
                     <div>{{ img.description }}</div>
                 </div>
             {% empty %}
-            <div>Картинок пока нет</div>
+            <div>{% translate 'No images yet' %}</div>
             {% endfor %}
         </div>
     </div>
     <div>
-        <a href="{% url 'shopapp:product_update' pk=product.pk %}">Update product</a>
+        <a href="{% url 'shopapp:product_update' pk=product.pk %}">{% translate 'Update product' %}</a>
     </div>
     <div>
-        <a href="{% url 'shopapp:product_archived' pk=product.pk %}">Archived product</a>
+        <a href="{% url 'shopapp:product_archived' pk=product.pk %}">{% translate 'Archived product' %}</a>
     </div>
     <div>
-        <a href="{% url 'shopapp:products_list' %}">Back to products list</a>
+        <a href="{% url 'shopapp:products_list' %}">{% translate 'Back to products list' %}</a>
     </div>
 {% endblock %}
