--- a/mysite/shopapp/templates/shopapp/products-list.html
+++ b/mysite/shopapp/templates/shopapp/products-list.html
@@ -1,19 +1,29 @@
 {% extends 'shopapp/base.html' %}
 
+{% load i18n %}
+
 {% block title %}
-    Products list
+    {% translate 'Products list' %}
 {% endblock %}
 
 {% block body %}
-    <h1>Products:</h1>
+    <h1>{% translate 'Products' %}:</h1>
     {% if products %}
+    <div>
+    {% blocktranslate count product_count=products|length %}
+    There is only one product.
+    {% plural %}
+    There are {{ product_count }} products.
+    {% endblocktranslate %}
+     </div>
     <div>
         {% for product in products %}
         <div>
             <p><a href="{% url 'shopapp:product_details' pk=product.pk %}"
-            >Name: {{ product.name }}</a></p>
-            <p>Price: {{ product.price }}</p>
-            <p>Discount: {% firstof product.discount 'No discount' %}</p>
+            >{% translate 'Name' context 'product name' %}: {{ product.name }}</a></p>
+            <p>{% translate 'Price' %}: {{ product.price }}</p>
+            {% translate 'no discount' as no_discount %}
+            <p>{% translate 'Discount' %}: {% firstof product.discount no_discount %}</p>
             <p>Created by: {{ product.created_by.username }}</p>
 
             {% if product.preview %}
@@ -23,12 +33,12 @@
         {% endfor %}
     </div>
     {% else %}
-    <h3>Продуктов пока нет</h3>
+    <h3>{% translate 'No product yet' %}</h3>
     {% endif %}
 <div>
     {% if perms.shopapp.add_product %}
         <a href="{% url 'shopapp:product_create' %}">
-            Create a new product
+            {% translate 'Create a new product' %}
         </a>
     {% endif %}
 </div>
