--- a/mysite/myauth/templates/myauth/about-me.html
+++ b/mysite/myauth/templates/myauth/about-me.html
@@ -1,4 +1,5 @@
 {% extends 'myauth/base.html' %}
+{% load cache %}
 
 {% block title %}
     About me
@@ -7,17 +8,19 @@
 {% block body %}
     <h1>User info</h1>
     {% if user.is_authenticated %}
-        <h2>Detail</h2>
-        <p>Username: {{ user.username }}</p>
-        <p>First name: {{ user.first_name }}</p>
-        <p>Last name: {{ user.last_name }}</p>
-        <p>Email: {{ user.email }}</p>
-        <p>Bio: {{ user.profile.bio }}</p>
-        <p>{% if user.profile.avatar %}
-                <img src="{{ user.profile.avatar.url }}" alt="{{ user.profile.avatar.name }}">
-        {% else %}</p>
-            <div>No avatar</div>
-        {% endif %}
+        {% cache 300 userinfo user.username %}
+            <h2>Detail</h2>
+            <p>Username: {{ user.username }}</p>
+            <p>First name: {{ user.first_name }}</p>
+            <p>Last name: {{ user.last_name }}</p>
+            <p>Email: {{ user.email }}</p>
+            <p>Bio: {{ user.profile.bio }}</p>
+            <p>{% if user.profile.avatar %}
+                    <img src="{{ user.profile.avatar.url }}" alt="{{ user.profile.avatar.name }}">
+            {% else %}</p>
+                <div>No avatar</div>
+            {% endif %}
+        {% endcache %}
     <div>
         {% if request.user.id == user.id or request.user.is_staff %}
         <a href="{% url 'myauth:update-me' pk=user.profile.pk %}">Update profile</a>
