--- a/mysite/shopapp/templates/shopapp/order_list.html
+++ b/mysite/shopapp/templates/shopapp/order_list.html
@@ -11,6 +11,7 @@
         {% for order in object_list %}
         <div>
             <p><a href="{% url 'shopapp:order_details' pk=order.pk  %}">Details #{{ order.pk }}</a> </p>
+            <p><a href="{% url 'shopapp:user_order_list' user_id=order.user.id %}">All orders by {{ order.user.username }}</a></p>
             <p>Order by {% firstof order.user.first_name order.user.username %}</p>
             <p>Promocode <code>{{ order.promocode }}</code></p>
             <p>Delivery address: {{ order.delivery_address }}</p>
