--- a/mysite/shopapp/templates/shopapp/shop-index.html
+++ b/mysite/shopapp/templates/shopapp/shop-index.html
@@ -1,4 +1,5 @@
 {% extends 'shopapp/base.html' %}
+{% load cache %}
 
 {% block title %}
     Shop index
@@ -28,7 +29,9 @@
         time running: {{ time_running }}
     </div>
 
+    {% cache 100 lorem %}
     <div>
         {% lorem 3 p random %}
     </div>
+    {% endcache %}
 {% endblock %}
